[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reservationFlet/src"]

[project]
name = "reservationflet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "py4web>=1.20251212.1",
    "pydal",
    "httpx",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "requests==2.32.5",
    "gspread",
    "oauth2client",
    "gspread-dataframe",
    "schedule",
    "pyyaml",
    "python-dotenv>=1.2.1",
    "flet[all]>=0.80.5",
    "pytest",
    "ansi2html>=1.9.2",
    "stancer>=1.0.0",
    "phonenumbers>=9.0.22",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.0",
]

[tool.ruff.lint]
ignore = ["E712", "F401", "E401", "E402"]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.14.13",
]

[tool.flet.app]
path = "src"
